--- a/dockerfiles/Dockerfile.alpine.latest
+++ b/dockerfiles/Dockerfile.alpine.latest
@@ -1,5 +1,5 @@
 #https://hub.docker.com/_/ubuntu
-FROM alpine:latest
+FROM alpine:3.14
 LABEL org.opencontainers.image.authors="githubfoam"
 
 ENV ANSIBLE_VERSION "4.1.0"
