--- a/.github/workflows/alpine-latest-wf.yml
+++ b/.github/workflows/alpine-latest-wf.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   alpine-latest-job:
     name: "docker alpine ansible ubuntu latest"
-    runs-on: alpine-latest
+    runs-on: ubuntu-latest
     env:
       distribution: "alpine" #https://hub.docker.com/_/alpine
       version: "4.1.0"
