--- a/.github/workflows/alpine-latest-wf.yml
+++ b/.github/workflows/alpine-latest-wf.yml
@@ -6,6 +6,8 @@ on:
     branches: [ test ]
 
 jobs:
+
+
   alpine-latest-job:
     name: "docker alpine ansible ubuntu latest"
     runs-on: ubuntu-latest
@@ -14,7 +16,7 @@ jobs:
       version: "4.1.0"
       name: "alpine/ansible"
       dockerfiledir: "dockerfiles"
-      dockerfilename: "Dockerfile.alpine.kali-tools-forensics"
+      dockerfilename: "Dockerfile.alpine.latest"
       playbookname: "playbook-alpine.yml"
     steps:
     - uses: actions/checkout@v2
@@ -40,83 +42,4 @@ jobs:
         sudo docker run -e ANSIBLE_FORCE_COLOR=1 --privileged --volume="${PWD}":/home/ansible:ro ${name}:${version} ansible-playbook -vvv /home/ansible/playbooks/${playbookname} --check #dry-run
         sudo docker run -e ANSIBLE_FORCE_COLOR=1 --privileged --volume="${PWD}":/home/ansible:ro ${name}:${version} ansible-playbook -vvv /home/ansible/playbooks/${playbookname}
                          
-
-  # alpine-2004-job:
-  #   name: "docker archlinux ansible 20.04"
-  #   runs-on: alpine-latest
-  #   env:
-  #     distribution: "alpine" #https://hub.docker.com/_/alpine
-  #     version: "latest"
-  #     name: "alpine2104:ansible"    
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - name: "os fingerprinting"
-  #     run: |
-  #       hostnamectl status
-  #       lsb_release -a
-  #       lsb_release -d
-  #       cat /etc/lsb-release
-  #       cat /etc/issue
-  #       cat /etc/os-release
-  #       sudo apt-get install -y neofetch && neofetch   
-  #   - name: "docker build alpine 21.04"
-  #     run: |
-  #       # destroyed afterwards (use --rm )
-  #       # all subsequent Dockerfile commands generate new images and the cache is not used
-  #       sudo docker build --no-cache --rm  -t alpine2104:ansible . --file dockerfiles/Dockerfile.alpine2104
-  #       docker image ls
-  #       docker image history alpine2104:ansible
-  #       docker system df -v               
-  #       docker image inspect alpine2104:ansible
-  #   - name: "playbook docker alpine 21.04"
-  #     run: |
-  #         # destroyed afterwards (use --rm )
-  #         # all subsequent Dockerfile commands generate new images and the cache is not used
-  #         sudo docker build --no-cache --rm  -t alpine2104:ansible . --file dockerfiles/Dockerfile.alpine2104
-  #         sudo docker run -e ANSIBLE_FORCE_COLOR=1 --privileged --volume="${PWD}":/home/ansible:ro ${name} ansible-playbook -vvv /home/ansible/playbooks/playbook.yml --syntax-check
-  #         sudo docker run -e ANSIBLE_FORCE_COLOR=1 --privileged --volume="${PWD}":/home/ansible:ro ${name} ansible-playbook -vvv /home/ansible/playbooks/playbook.yml --check #dry-run
-  #         sudo docker run -e ANSIBLE_FORCE_COLOR=1 --privileged --volume="${PWD}":/home/ansible:ro ${name} ansible-playbook -vvv /home/ansible/playbooks/playbook.yml
-  
-     
-        
-
-
-  alpine-1804-job:
-    name: "docker archlinux ansible  alpine 21.04"
-    runs-on: alpine-18.04
-    env:
-      distribution: "alpine" #https://hub.docker.com/_/alpine
-      version: "latest"
-      name: "alpine2104:ansible"    
-    steps:
-    - uses: actions/checkout@v2
-    - name: "os fingerprinting"
-      run: |
-        hostnamectl status
-        lsb_release -a
-        lsb_release -d
-        cat /etc/lsb-release
-        cat /etc/issue
-        cat /etc/os-release
-        sudo apt-get install -y neofetch && neofetch    
-    - name: "docker build alpine 21.04"
-      run: |
-        # destroyed afterwards (use --rm )
-        # all subsequent Dockerfile commands generate new images and the cache is not used
-        sudo docker build --no-cache --rm  -t alpine2104:ansible . --file dockerfiles/Dockerfile.alpine2104
-        docker image ls
-        docker image history alpine2104:ansible
-        docker system df -v               
-        docker image inspect alpine2104:ansible
-    - name: "playbook docker alpine 21.04"
-      run: |
-          # destroyed afterwards (use --rm )
-          # all subsequent Dockerfile commands generate new images and the cache is not used
-          sudo docker build --no-cache --rm  -t alpine2104:ansible . --file dockerfiles/Dockerfile.alpine2104
-          sudo docker run -e ANSIBLE_FORCE_COLOR=1 --privileged --volume="${PWD}":/home/ansible:ro ${name} ansible-playbook -vvv /home/ansible/playbooks/playbook.yml --syntax-check
-          sudo docker run -e ANSIBLE_FORCE_COLOR=1 --privileged --volume="${PWD}":/home/ansible:ro ${name} ansible-playbook -vvv /home/ansible/playbooks/playbook.yml --check #dry-run
-          sudo docker run -e ANSIBLE_FORCE_COLOR=1 --privileged --volume="${PWD}":/home/ansible:ro ${name} ansible-playbook -vvv /home/ansible/playbooks/playbook.yml
-  
-
-
-
+s
