--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -1,10 +1,22 @@
-#https://hub.docker.com/_/ubuntu
 FROM alpine:3.14
-LABEL org.opencontainers.image.authors="githubfoam"
 
-ENV ANSIBLE_VERSION "4.6.0"
-ENV ANSIBLE_LINT_VERSION "5.1.3"
-ENV MITOGEN_VERSION "0.2.9"
+# Metadata params
+ARG BUILD_DATE
+ARG ANSIBLE_VERSION
+ARG ANSIBLE_LINT_VERSION
+ARG MITOGEN_VERSION
+ARG VCS_REF
+
+# Metadata
+LABEL maintainer="Pascal A. <pascalito@gmail.com>" \
+      org.label-schema.url="https://github.com/pad92/docker-ansible-alpine/blob/master/README.md" \
+      org.label-schema.build-date=${BUILD_DATE} \
+      org.label-schema.version=${ANSIBLE_VERSION} \
+      org.label-schema.vcs-url="https://github.com/pad92/docker-ansible-alpine.git" \
+      org.label-schema.vcs-ref=${VCS_REF} \
+      org.label-schema.docker.dockerfile="/Dockerfile" \
+      org.label-schema.description="Ansible on alpine docker image" \
+      org.label-schema.schema-version="1.0"
 
 RUN apk --update --no-cache add \
         ca-certificates \
@@ -47,10 +59,7 @@ Host *\n\
 
 COPY entrypoint /usr/local/bin/
 
-#testing
-RUN ansible --version
-
-WORKDIR /home/ansible
+WORKDIR /ansible
 
 ENTRYPOINT ["entrypoint"]
 
