--- a/.github/workflows/alpine-ansible-wf.yml
+++ b/.github/workflows/alpine-ansible-wf.yml
@@ -36,7 +36,7 @@ jobs:
              --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` \
              --build-arg ANSIBLE_VERSION=${ANSIBLE_VERSION:=4.6.0} \
              --build-arg ANSIBLE_LINT_VERSION=${ANSIBLE_LINT_VERSION:=5.1.3} \
-             -t ${IMAGE_NAME:=pad92/ansible-alpine:4.6.0} .
+             -t ${IMAGE_NAME:=githubfoam/ansible-alpine:4.6.0} .
         docker tag githubfoam/ansible-alpine:4.6.0 githubfoam/ansible-alpine:latest
     # - name: "docker push alpine"
     #   run: |
