--- a/dockerfiles/Dockerfile.alpine.latest
+++ b/dockerfiles/Dockerfile.alpine.latest
@@ -1,5 +1,5 @@
-#https://hub.docker.com/_/ubuntu
-FROM alpine:3.14
+#https://hub.docker.com/_/alpine
+FROM alpine:latest
 
 
 ENV ANSIBLE_VERSION "4.6.0"
