--- a/playbooks/roles/base/tasks/Alpine_3.15.0_install.yml
+++ b/playbooks/roles/base/tasks/Alpine_3.15.0_install.yml
@@ -14,21 +14,11 @@
     #     use: '{{ ansible_pkg_mgr }}'
     #     state: present
 
-    - name: "install nfs server package"
-      package:
-        name: nfs-utils
+- name: "Update package cache"
+  apk:
+    update_cache: yes
 
-    - name: "autostart nfs server"
-      service:
-        name: nfs
-        enabled: True
-        state: started
-
-    - name: "Copy exports file"
-      template:
-        src: templates/exports.j2
-        dest: /etc/exports
-        owner: root
-        group: root
-        mode: 0644
-      notify: reload nfs
+- name: "Upgrade all packages"
+  apk:
+    available: yes
+    upgrade: yes   
